--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "recharts": "^3.1.2",
     "sass": "^1.89.2",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
